--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,8 +19,8 @@
       <h5>Sobre</h5>
       <ul class="nav flex-column">
         <li class="nav-item mb-2"><a href="/about" class="nav-link p-0 text-muted">Quem sou</a></li>
-        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Termos de Uso</a></li>
-        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Política de Privacidade</a></li>
+        <li class="nav-item mb-2"><a href="/termos-de-uso" class="nav-link p-0 text-muted">Termos de Uso</a></li>
+        <li class="nav-item mb-2"><a href="/politica-de-privacidade" class="nav-link p-0 text-muted">Política de Privacidade</a></li>
       </ul>
     </div>
 
