--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <title>{{ page.title }} - {{ site.title }}</title>
     {% feed_meta %}
     {% seo %}
-    <link rel="icon" type="image/x-icon" href="favicon.png">
+    <link rel="icon" type="image/x-icon" href="/favicon.png">
     <link rel="stylesheet" href="/assets/libs/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="/assets/libs/bootstrap-icons/font/bootstrap-icons.css">
     <link rel="stylesheet" href="/assets/css/styles.css">
@@ -17,7 +17,9 @@
       {{ content }}
     </main>
     {% include footer.html %}
+    {% include cookies.html %}
     <script src="/assets/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="/assets/js/app.js"></script>
     {% include google_analytics.html %}
   </body>
 </html>
